--- a/project/imgui.ini
+++ b/project/imgui.ini
@@ -49,22 +49,27 @@ Size=88,100
 Collapsed=0
 
 [Window][State]
-Pos=60,60
+Pos=33,482
 Size=326,191
 Collapsed=0
 
 [Window][collisionDistance]
-Pos=60,60
-Size=61,77
+Pos=41,81
+Size=136,77
 Collapsed=0
 
 [Window][Goal Window]
-Pos=60,60
-Size=131,77
+Pos=202,82
+Size=215,77
 Collapsed=0
 
 [Window][Star Debug]
-Pos=60,60
-Size=131,215
+Pos=34,229
+Size=300,234
+Collapsed=0
+
+[Window][Star Collection]
+Pos=39,173
+Size=142,48
 Collapsed=0
 
