--- a/project/imgui.ini
+++ b/project/imgui.ini
@@ -53,3 +53,13 @@ Pos=60,60
 Size=326,191
 Collapsed=0
 
+[Window][Button]
+Pos=60,60
+Size=252,56
+Collapsed=0
+
+[Window][collisionDistance]
+Pos=60,60
+Size=61,77
+Collapsed=0
+
