--- a/project/CG2-00-01.vcxproj
+++ b/project/CG2-00-01.vcxproj
@@ -146,9 +146,9 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="Application\Scene\MyGame.cpp" />
     <ClCompile Include="Engine\Lighting\Light.cpp" />
     <ClCompile Include="Application\Goal.cpp" />
-    <ClCompile Include="GameClear.cpp" />
-    <ClCompile Include="Rule.cpp" />
-    <ClCompile Include="Title.cpp" />
+    <ClCompile Include="Application\Scene\GameClear.cpp" />
+    <ClCompile Include="Application\Scene\Rule.cpp" />
+    <ClCompile Include="Application\Scene\Title.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\Scene\DebugMode.h" />
@@ -197,9 +197,9 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Application\Scene\MyGame.h" />
     <ClInclude Include="Engine\Lighting\Light.h" />
     <ClInclude Include="Application\Goal.h" />
-    <ClInclude Include="GameClear.h" />
-    <ClInclude Include="Rule.h" />
-    <ClInclude Include="Title.h" />
+    <ClInclude Include="Application\Scene\GameClear.h" />
+    <ClInclude Include="Application\Scene\Rule.h" />
+    <ClInclude Include="Application\Scene\Title.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="externels\imgui\LICENSE.txt" />
