--- a/project/CG2-00-01.vcxproj.filters
+++ b/project/CG2-00-01.vcxproj.filters
@@ -47,9 +47,9 @@
     <ClCompile Include="Engine\Lighting\Light.cpp" />
     <ClCompile Include="Application\Goal.cpp" />
     <ClCompile Include="Engine\UI\Button.cpp" />
-    <ClCompile Include="Title.cpp" />
-    <ClCompile Include="GameClear.cpp" />
-    <ClCompile Include="Rule.cpp" />
+    <ClCompile Include="Application\Scene\Title.cpp" />
+    <ClCompile Include="Application\Scene\GameClear.cpp" />
+    <ClCompile Include="Application\Scene\Rule.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\Scene\DebugMode.h" />
@@ -98,9 +98,9 @@
     <ClInclude Include="Engine\Lighting\Light.h" />
     <ClInclude Include="Application\Goal.h" />
     <ClInclude Include="Engine\UI\Button.h" />
-    <ClInclude Include="Title.h" />
-    <ClInclude Include="GameClear.h" />
-    <ClInclude Include="Rule.h" />
+    <ClInclude Include="Application\Scene\Title.h" />
+    <ClInclude Include="Application\Scene\GameClear.h" />
+    <ClInclude Include="Application\Scene\Rule.h" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="externels\assimp\lib\Release\assimp-vc143-mtd.lib" />
